--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "scrm"]
+	path = scrm
+	url = https://github.com/scrm/scrm-r
+	shallow = true
+	registered = true
